# ESP32Template

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
.devcontainer/: Dockerfile  devcontainer.json
ManufacturingData/: Credentials.csv  Salt and verifier generation.py  config.csv  values.csv  values_tmp.csv
ManufacturingData/csv/: Forno-1.csv  prefix-1.csv
main/: CMakeLists.txt  HMI.c  HMI.h  Kconfig.projbuild  idf_component.yml  main.c  main.cpp
main/peripherials/Led/: Led.c  Led.h
main/peripherials/pt100_spi/: pt100_spi.c  pt100_spi.h
main/peripherials/thermocouple_spi/: oldc  thermocouple_spi.c  thermocouple_spi.h
main/regulators/temperature/: temperature.c  temperature.h
main/sclib/alarms/: alarms.c  alarms.h
main/sclib/control/PID/: pid.c  pid.h
main/sclib/control/Profile/: profile.c  profile.h
main/sclib/hmi_tools/: hmi_tools.c  hmi_tools.h
main/services/NVS/: nvs_manager.c  nvs_manager.h
main/services/Wifi/: Wifi.c  Wifi.h
main/services/battery/: battery.c  battery.h
main/services/mqtt/: mqtt.c  mqtt.h
main/services/mqtt/home_assistant/: home_assistant.c  home_assistant.h
partition_table/: partitionTable.csv
