idf_component_register(SRCS "HMI.c" "main.c" "sclib/hmi_tools/hmi_tools.c" "peripherials/led/led.c" "services/battery/battery.c" "services/mqtt/mqtt.c" "services/mqtt/home_assistant/home_assistant.c" "services/Wifi/Wifi.c"
                       INCLUDE_DIRS "." "sclib/hmi_tools" "peripherials/led" "services/battery" "services/mqtt" "services/Wifi")